[gd_scene load_steps=25 format=3 uid="uid://bihirybdb44dq"]

[ext_resource type="Script" uid="uid://bkfsr1r06jaq1" path="res://Level System/space_shooter_level.gd" id="1_iu03b"]
[ext_resource type="PackedScene" uid="uid://2p8t5pmie1mf" path="res://camera.tscn" id="2_kmupl"]
[ext_resource type="Script" uid="uid://buyfh6jeyc3c7" path="res://Level System/ui_level.gd" id="2_yhb0r"]
[ext_resource type="FontFile" uid="uid://gff28tlo7v6d" path="res://_assets/font_Robtronika/TrueType (.ttf)/Robtronika-Regular.ttf" id="3_kmupl"]
[ext_resource type="Script" uid="uid://co6g1v3ikj31g" path="res://Text/highlight_text_effect.gd" id="4_vg103"]
[ext_resource type="Script" uid="uid://btp7tr7j06bg2" path="res://Level System/audio_stream_player_level.gd" id="5_yiv6q"]
[ext_resource type="PackedScene" uid="uid://c6hcg7jwuon3w" path="res://Level System/Wave.tscn" id="6_v726u"]
[ext_resource type="PackedScene" uid="uid://cra5svle4din1" path="res://Unit Manager/Scenes/Player.tscn" id="8_vg103"]
[ext_resource type="Animation" uid="uid://bmr45bbomwfak" path="res://level_transition_in.res" id="9_yiv6q"]
[ext_resource type="Animation" uid="uid://c62o3hy2w43lp" path="res://level_transition_out.res" id="10_v726u"]

[sub_resource type="Theme" id="Theme_vnsei"]
default_font = ExtResource("3_kmupl")

[sub_resource type="RichTextEffect" id="RichTextEffect_qwjrg"]
script = ExtResource("4_vg103")
metadata/_custom_type_script = "uid://co6g1v3ikj31g"

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_cnv2j"]

[sub_resource type="Curve2D" id="Curve2D_pebiv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 896, -192, -1.03896, -64.4156, 1.03896, 64.4156, 896, 128, 0, 0, 0, 0, 832, 192)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_iu03b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 832, -192, -0.836629, -65.5645, 0.836629, 65.5645, 832, 256, 0, 0, 0, 0, 768, 320)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_yhb0r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -192, 128, -129.87, 0, 129.87, 0, 192, 128, -129.351, 1.03896, 129.351, -1.03896, 64, 320, 0, 0, 0, 0, 192, 320)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_kmupl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -192, 704, -126.857, 0, 126.857, 0, 256, 704, 0.571429, 62.2857, -0.571429, -62.2857, 0, 448, 0, 0, 0, 0, 128, 448)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_vg103"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1024, -192, -1.03896, -64.4156, 1.03896, 64.4156, 1024, 128, 0, 0, 0, 0, 1088, 192)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_yiv6q"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1088, -192, -0.836629, -65.5645, 0.836629, 65.5645, 1088, 256, 0, 0, 0, 0, 1152, 320)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_v726u"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2112, 128, 128.033, -0.691429, -128.033, 0.691429, 1728, 128, 127.861, 0.347533, -127.861, -0.347533, 1856, 320, 0, 0, 0, 0, 1728, 320)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_wyn0m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2112, 704, 125.805, 0.836629, -125.805, -0.836629, 1664, 704, 0.571429, 62.2857, -0.571429, -62.2857, 1920, 448, 0, 0, 0, 0, 1792, 448)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_8jw56"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 256, 1280, -131.602, 62.5798, 131.602, -62.5798, 320, 896, 0, 0, 0, 0, 768, 832)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_5elvm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1664, 1280, 131.009, 61.172, -131.009, -61.172, 1600, 896, 0, 0, 0, 0, 1152, 832)
}
point_count = 3

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wyn0m"]
_data = {
&"level_transition_in": ExtResource("9_yiv6q"),
&"level_transition_out": ExtResource("10_v726u")
}

[node name="SpaceShooterLevel 3" type="Node2D"]
modulate = Color(0, 0, 0, 1)
script = ExtResource("1_iu03b")

[node name="Camera2D" parent="." instance=ExtResource("2_kmupl")]

[node name="UI_level" type="CanvasLayer" parent="."]
script = ExtResource("2_yhb0r")

[node name="RichTextLabel" type="RichTextLabel" parent="UI_level"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vnsei")
bbcode_enabled = true
text = "[font size=54][highlight]LEVEL 3"
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_qwjrg")]

[node name="TimerLevel" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_cnv2j")
volume_db = -9.0
script = ExtResource("5_yiv6q")

[node name="Wave" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave" index="0"]
curve = SubResource("Curve2D_pebiv")

[node name="LineFormation" parent="Wave" index="1"]
points = PackedVector2Array(832, 192, 320, 64)

[node name="Wave2" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave2" index="0"]
curve = SubResource("Curve2D_iu03b")

[node name="LineFormation" parent="Wave2" index="1"]
points = PackedVector2Array(768, 320, 256, 192)

[node name="Wave3" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave3" index="0"]
curve = SubResource("Curve2D_yhb0r")

[node name="LineFormation" parent="Wave3" index="1"]
points = PackedVector2Array(192, 320, 704, 448)

[node name="Wave4" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave4" index="0"]
curve = SubResource("Curve2D_kmupl")

[node name="LineFormation" parent="Wave4" index="1"]
points = PackedVector2Array(128, 448, 640, 576)

[node name="Wave5" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave5" index="0"]
curve = SubResource("Curve2D_vg103")

[node name="LineFormation" parent="Wave5" index="1"]
points = PackedVector2Array(1088, 192, 1600, 64)

[node name="Wave6" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave6" index="0"]
curve = SubResource("Curve2D_yiv6q")

[node name="LineFormation" parent="Wave6" index="1"]
points = PackedVector2Array(1152, 320, 1664, 192)

[node name="Wave7" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave7" index="0"]
curve = SubResource("Curve2D_v726u")

[node name="LineFormation" parent="Wave7" index="1"]
points = PackedVector2Array(1728, 320, 1216, 448)

[node name="Wave8" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave8" index="0"]
curve = SubResource("Curve2D_wyn0m")

[node name="LineFormation" parent="Wave8" index="1"]
points = PackedVector2Array(1792, 448, 1280, 576)

[node name="Wave9" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave9" index="0"]
curve = SubResource("Curve2D_8jw56")

[node name="LineFormation" parent="Wave9" index="1"]
points = PackedVector2Array(832, 768, 896, 384)

[node name="Wave10" parent="." instance=ExtResource("6_v726u")]

[node name="Path2D" parent="Wave10" index="0"]
curve = SubResource("Curve2D_5elvm")

[node name="LineFormation" parent="Wave10" index="1"]
points = PackedVector2Array(1088, 768, 1024, 384)

[node name="Player" parent="." instance=ExtResource("8_vg103")]
position = Vector2(960, 1180)

[node name="LevelTransition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wyn0m")
}

[connection signal="timeout" from="TimerLevel" to="UI_level" method="_on_timer_level_timeout"]
[connection signal="timeout" from="TimerLevel" to="Wave" method="_on_timer_level_timeout"]
[connection signal="animation_finished" from="LevelTransition" to="." method="_on_level_transition_animation_finished"]
[connection signal="animation_finished" from="LevelTransition" to="Player" method="_on_level_transition_animation_finished"]

[editable path="Wave"]
[editable path="Wave2"]
[editable path="Wave3"]
[editable path="Wave4"]
[editable path="Wave5"]
[editable path="Wave6"]
[editable path="Wave7"]
[editable path="Wave8"]
[editable path="Wave9"]
[editable path="Wave10"]
